# oh-my-versioning

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.agents/skills/trellis-finish-work/: SKILL.md  SKILL.md.backup
.claude/skills/omv-versioning/: SKILL.md
.github/: dist-build-setup.yml
.github/scripts/: install-protoc.sh
.github/workflows/: npm-trusted-publish.yml  release.yml  rust-quality.yml
.omv/: adapters.toml  config.toml  finalizations.toml  integrations.toml  state.toml  targets.toml
.omv/ai/: contract.json  instructions.md
.omv/ai/adapters/: project-instructions.md
.omv/skills/: README.md
.opencode/commands/trellis/: finish-work.md
.trellis/: .template-hashes.json  config.yaml  workflow.md
.trellis/spec/backend/: index.md  (+6 more)
docs/: OMV_CONTRACT_ARCHITECTURE.md  RELEASING.md
docs/examples/: complex-project-targets-v2.md
docs/matrix/: MENUCONFIG_STYLE_MATRIX.md
resources/i18n/: en-US.toml  zh-CN.toml
src/: adapter.rs  errors.rs  i18n.rs  lib.rs  main.rs
src/app/: mod.rs
src/cli/: mod.rs
src/contract/: mod.rs  registry.rs
src/core/: adapter.rs  date.rs  finalization.rs  integration.rs  locale.rs  mod.rs  schema.rs
src/storage/: adapters.rs  atomic.rs  config.rs  finalizations.rs  integrations.rs  mod.rs  state.rs  targets.rs
src/sync/: c_family.rs  cargo_workspace.rs  generic.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  skills.rs
src/ui/: app.rs  discovery.rs  event.rs  mod.rs  runtime.rs
tests/: external_scenarios.rs  integration.rs
tests/integration/: target_sync.rs
(+186 files in other folders)
