[package]
name = "omv"
version = "2605.3.2"
edition = "2024"
description = "Date-based version management with one local source of truth."
homepage = "https://github.com/magicdian/oh-my-versioning"
repository = "https://github.com/magicdian/oh-my-versioning"
license = "MIT"
readme = "README.md"

[dependencies]
crossterm = "0.28"
prost = "0.14"
ratatui = "0.29"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[build-dependencies]
prost-build = "0.14"

# The profile that 'dist' will build with.
[profile.dist]
inherits = "release"
lto = "thin"
